  in ant/antcall tasks when inheritall="false" is set.

* <propertyfile> would not close the original property file.

* <ant> will no longer override a subbuilds basedir with inheritall="true". 

* Fixed problem with the built-in <junit> formatters which assumed
  that only one test could be running at the same time - this is not
  necessarily true, see junit.extensions.ActiveTestSuite.

Other changes:
--------------

* New task replaceregexp

* The attributes zipfile, jarfile, warfile and earfile (from the Zip, 
  Jar, War and Ear tasks) have been deprecated and superseded by a 
  new attribute "file".

* The attribute zipfile in GZip has been deprecated and superseded 
  by "tofile" attribute.

* Added a new condition <isset> that test for the existence of a
  property to the condition task.

* Ant's testcases require JUnit 3.7 or above as they now use the new
  assertTrue method instead of assert.

* <taskdef> and <typedef> will now emit a warning if a task/type of
  the given name already exists.

* A new revision of VAJ tasks: The most important new feature
  is the ability to execute VAJ tasks from the command line by
  exploiting the Remote Tool Access feature of VAJ.

* Improved support for Novell NetWare.

Changes from Ant 1.4 to Ant 1.4.1
===========================================

Fixed bugs:
-----------

* <ant>'s antfile attribute will now also be considered an absolute path on
  Windows systems, if it starts with a \ and no drive specifier.
 
* The fullpath attribute of <zipfileset> has been ignored if you used
  the src attribute at the same time.

* The manifest file is now always placed as the second entry (after /META-INF)
  in generated jars. This allows the manifest to be read by JarInputStreams
  
* Fixed bug in depend task which would fail with a NullPointerException if no
  dependency cache was specified.
  
* sql task now handles REM statements correctly so that lines starying with rem
  but which are not comments are actually processed.
  