@@ -97,11 +97,6 @@ attributes of zipfilesets in a Zip or Jar task.)</p>
       the destination file if it already exists.</td>
     <td valign="top" align="center">No</td>
   </tr>
-  <tr>
-    <td valign="top">whenempty</td>
-    <td valign="top">Behavior to use if no files match.</td>
-    <td valign="top" align="center">No</td>
-  </tr>
 </table>
 <h3>Nested elements</h3>
 <h4>metainf</h4>
